--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
+/* ? MAIN PART START */
 body {
-  position: relative;
-  max-width: 100vw;
+  max-width: 100vw; 
+  /*  vh and vw для того, чтобы использовать макс. ширину и длину браузера, и отталкиваться от этого */
   max-height: 100vh;
   background-color: #09094c;
 }
@@ -30,8 +31,9 @@ h2 {
 .draw:hover:before {
   content: "";
   position: absolute;
-  inset: -10px;
-  background: inherit;
+  inset: -10px; 
+  background: inherit; 
+  /* background color the same as the color of cards */
   filter: blur(30px);
 }
 #cards {
@@ -57,6 +59,7 @@ h2 {
 .inputs button:hover {
   font-size: larger;
   border: 2px solid;
+  /* when you are focused on inputs and button the size of the text is becoming larger */
 }
 .inputs input {
   width: 12rem;
@@ -103,17 +106,14 @@ h2 {
   border: 2px solid;
   transition: 0.3s;
 }
-.filter_btn:hover {
+.btn_filter:hover {
   background-color: #09094c;
   color: white;
 }
+/* ? MAIN PART END */
 
 
-/* ? start modal */
-
-
-
-/* ?Modal Edit  */
+/* ? EDIT MODAL START */
 h1{
   text-align: center;
    color: white
@@ -134,7 +134,6 @@ h1{
 .formEdit {
   display: flex;
   flex-direction: column;
-
 }
 
 .editInps {
@@ -163,24 +162,21 @@ h1{
 #closeEditModal {
   color: #0b1223;
 }
-/* ?end edit modal */
+/* ? EDIT MODAL END */
 
-/* ?pagination */
+/* ?PAGINATION START */
 
 .pagination{
   display: flex;
   justify-content: center;
-  margin-top: 50px;
-  margin-bottom: 50px;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
  }
  
-.page-item{
-  margin-bottom: 30px;
-  margin-top:30px
-}
 
 .page-link:hover {
   font-size: 1.2em;
   border: 2px solid #ffffff;
 }
 
+/* ?PAGINATION END*/
